<resources>
    <string name="_100_premium_designed_packs">100+ Premium Designed Packs</string>
    <string name="_100_premium_icon_packs">100+ Premium Icon Packs</string>
    <string name="_100_premium_icon_packs_description">Access to exclusive icon packs and premium effects.</string>
    <string name="a_long_time">A LONG TIME</string>
    <string name="a_m">AM</string>
    <string name="abandoned_clean_this">Remove</string>
    <string name="abandoned_promise_explanation">"The app for this icon isn't installed. You can remove it, or search for the app and install it manually."</string>
    <string name="abandoned_promises_title">This app is not installed</string>
    <string name="abandoned_search">Search</string>
    <string name="about_us">About us</string>
    <string name="access_all_theme">"Access All Theme Pack 
No ads"</string>
    <string name="access_to_calendar">Access to Calendar</string>
    <string name="access_to_camera">Access to Camera</string>
    <string name="access_to_contacts">Access to Contacts</string>
    <string name="access_to_files">Access to Files</string>
    <string name="access_to_gallery">Photo Access</string>
    <string name="access_to_gpt">Access to GPT-4o</string>
    <string name="access_to_premium">Access to premium feature</string>
    <string name="access_to_usage_stats">Access to Usage Stats</string>
    <string name="action">Action</string>
    <string name="action_add_to_workspace">Add to Home screen</string>
    <string name="action_back">Back</string>
    <string name="action_decrease_height">Decrease height</string>
    <string name="action_decrease_width">Decrease width</string>
    <string name="action_deep_shortcut">Shortcuts</string>
    <string name="action_dismiss_notification">Dismiss</string>
    <string name="action_increase_height">Increase height</string>
    <string name="action_increase_width">Increase width</string>
    <string name="action_move">Move item</string>
    <string name="action_move_here">Move item here</string>
    <string name="action_move_to_workspace">Move to Home screen</string>
    <string name="action_resize">Resize</string>
    <string name="activities">Activities</string>
    <string name="activity_not_available">"App isn't available"</string>
    <string name="activity_not_found">"App isn't installed."</string>
    <string name="adaptive">Adaptive</string>
    <string name="adaptive_icon">Adaptive Icon</string>
    <string name="add">Add</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="add_item_request_drag_hint">Touch &amp; hold to place manually</string>
    <string name="add_library">Add Library...</string>
    <string name="add_new_wallpaper">Add New Wallpaper</string>
    <string name="add_photos">Add Photos</string>
    <string name="add_to_album">Add to Album</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="add_to_folder">Add to folder: %1$s</string>
    <string name="add_to_folder_with_app">Add to folder with %1$s</string>
    <string name="add_widget">Add Widget</string>
    <string name="added_to_album">Added to Album</string>
    <string name="added_to_folder">Item added to folder</string>
    <string name="adjust">Adjust</string>
    <string name="ads_count_reward" formatted="false">Watch Ads (%s/%s)</string>
    <string name="ads_not_ready_to_show_please_try_again">Ads not ready to show, please try again</string>
    <string name="ads_support_out_free_launcher_os">"Remove Ads of True Launcher and all of
its internal and satellite apps"</string>
    <string name="ads_support_out_free_launcher_os_tablet">Remove Ads of True Launcher and all of its internal and satellite apps</string>
    <string name="advance">Advance</string>
    <string name="ai">AI</string>
    <string name="ai_aspect_ratio">Aspect Ratio</string>
    <string name="ai_chat">AI Chat</string>
    <string name="ai_chat_description">Start a conversation with AI</string>
    <string name="ai_chat_unlimited_access">AI Chat Unlimited Access</string>
    <string name="ai_copied">Copied</string>
    <string name="ai_copy">Copy</string>
    <string name="ai_description">Let’s start a chat with AI or try the suggestions below</string>
    <string name="ai_description_new">"Multitasking and multi models with 
Launcher AI."</string>
    <string name="ai_feature_update">Feature is being updated</string>
    <string name="ai_file_not_support">This format is not support</string>
    <string name="ai_generation_invalid_prompt">Invalid Prompt Detected</string>
    <string name="ai_generation_server_error">Server Error Occurred</string>
    <string name="ai_image">AI Image</string>
    <string name="ai_image_download">Download</string>
    <string name="ai_image_downloaded">Downloaded</string>
    <string name="ai_image_reported">Reported</string>
    <string name="ai_is_regenerating_the_respond">AI is regenerating the respond</string>
    <string name="ai_is_thinking_of_a_respond">AI is thinking of a respond</string>
    <string name="ai_launcher">AI Launcher</string>
    <string name="ai_loading_view">Please wait…</string>
    <string name="ai_messages">AI Messages</string>
    <string name="ai_models_gpt_4o_gemini">AI Models: GPT-4o, Gemini</string>
    <string name="ai_models_gpt_4o_gemini_description">Unlock advanced models and features for AI Chat module.</string>
    <string name="ai_photo">Photo</string>
    <string name="ai_pro">PRO</string>
    <string name="ai_set_wallpaper">Set Wallpaper</string>
    <string name="ai_solid">Solid</string>
    <string name="ai_today">Today</string>
    <string name="ai_tranparent">Transparent</string>
    <string name="ai_yesterday">Yesterday</string>
    <string name="alarm">Alarm</string>
    <string name="alarm_clock">Alarm Clock</string>
    <string name="alarm_missed">Alarm missed</string>
    <string name="alarms">Alarms</string>
    <string name="album">Album</string>
    <string name="album_name_existed">Album name existed</string>
    <string name="album_name_should_not_be_blank">Album name should not be blank</string>
    <string name="album_name_should_not_be_too_long">Album name should not be too long.</string>
    <string name="albums">Albums</string>
    <string name="all">🌟 All</string>
    <string name="all_apps_button_label">Apps list</string>
    <string name="all_apps_button_personal_label">Personal apps list</string>
    <string name="all_apps_button_work_label">Work apps list</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="all_apps_loading_message">Loading apps…</string>
    <string name="all_apps_no_search_results">No Results for \"%1$s\"</string>
    <string name="all_apps_personal_tab">Personal</string>
    <string name="all_apps_search_bar_hint">Search apps</string>
    <string name="all_apps_search_market_message">Search for more apps</string>
    <string name="all_apps_work_tab">Work</string>
    <string name="all_day">All day</string>
    <string name="all_photos">All Photos</string>
    <string name="all_text">All</string>
    <string name="allow">Allow</string>
    <string name="allow_access">Allow Access</string>
    <string name="allow_access_to_manage_media_permission">Manage Media Permission is required</string>
    <string name="allow_notification">Allow Notification</string>
    <string name="allow_permission">Allow Permission</string>
    <string name="allow_rotation_desc">When phone is rotated</string>
    <string name="allow_rotation_title">Allow Home screen rotation</string>
    <string name="allow_usage_stats">Allow Access to Usage Stats</string>
    <string name="alpha">Alpha</string>
    <string name="already_applied_this_icon_pack">Already applied this icon pack</string>
    <string name="already_applied_this_theme_pack">Already applied this theme pack</string>
    <string name="already_purchased">Already Purchased</string>
    <string name="ambient_light">Ambient light</string>
    <string name="and">and</string>
    <string name="and_then">"and then "</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="angle">Angle</string>
    <string name="animals">Animals &amp; Nature</string>
    <string name="app_animation">App Animations</string>
    <string name="app_blocked">App Blocked</string>
    <string name="app_continue">Continue</string>
    <string name="app_description">Making Android to OS 26 interface</string>
    <string name="app_downloading_title">%1$s downloading, %2$s complete</string>
    <string name="app_filter_class" />
    <string name="app_funtion_settings">App Funtions Settings</string>
    <string name="app_icon">App Icon</string>
    <string name="app_info">App Info</string>
    <string name="app_info_drop_target_label">App info</string>
    <string name="app_library">App Library</string>
    <string name="app_may_not_be_used_in_future">True Launcher may not be used in the future because of not support technique.</string>
    <string name="app_name">True Launcher</string>
    <string name="app_result">App result</string>
    <string name="app_settings">App Settings</string>
    <string name="app_size">Size: %1$s</string>
    <string name="app_suggestion">App Suggestion</string>
    <string name="app_suggestion_desc">Get app launcher suggestions based on your usage patterns.</string>
    <string name="battery">Battery</string>
    <string name="calendar">Calendar</string>
    <string name="calendar_month_desc">Track the day of the month.</string>
    <string name="clock">Clock</string>
    <string name="clock_current_desc">Display the current time.</string>
    <string name="clock_i">Clock I</string>
    <string name="content_access_noti">Allow us to send notifications so you won’t miss out on trending topics, special offers, and important updates.</string>
    <string name="content_success_set_theme">Your new theme is ready! To fully apply the theme, please return to your home screen. Discover the fresh and creative look now installed for your launcher!</string>
    <string name="default_name">Default</string>
    <string name="deny">Deny</string>
    <string name="done">Done</string>
    <string name="dont_ask_again">"Don't ask again"</string>
    <string name="featured">Featured</string>
    <string name="featured_desc">Appreciate special moments through Memories and Featured Photos.</string>
    <string name="five_selected_refresh">Every 12 hour</string>
    <string name="forecast">Forecast</string>
    <string name="forecast_desc">See the current weather conditions and forecast for a location.</string>
    <string name="four_selected_refresh">Every 9 hour</string>
    <string name="get_coin_free">Get Coin free</string>
    <string name="go_to_home_screen">Go to home screen</string>
    <string name="may_we_send_notifications">May we send notifications?</string>
    <string name="month">Month</string>
    <string name="one_selected_refresh">Every hour</string>
    <string name="photo">Photo</string>
    <string name="select_folder">Select folder</string>
    <string name="set_later">Later</string>
    <string name="share_on_facebook">Share on Facebook</string>
    <string name="siri_suggestion">AI Suggestions</string>
    <string name="six_selected_refresh">Every day</string>
    <string name="status">Status</string>
    <string name="status_desc">View the status of your iPhone and connected Bluetooth accessories.</string>
    <string name="successfully_set_icon">🥳 Successfully set!</string>
    <string name="three_selected_refresh">Every 6 hour</string>
    <string name="two_selected_refresh">Every 3 hour</string>
    <string name="up_next">Up Next</string>
    <string name="up_next_desc">Keep track of your upcoming events and meetings.</string>
    <string name="weather">Weather</string>
    <string name="world_clock">World Clock</string>
    <string name="world_clock_desc">View the time in multiple cities around the world.</string>
</resources>