<?xml version="1.0" encoding="utf-8"?>
<widgets
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <widget
        android:label="@string/clock"
        android:icon="@drawable/launcher_settings_icon"
        android:name="@string/clock_i"
        android:description="@string/clock_current_desc"
        android:initialLayout="@layout/clock_small_widget_layout"
        android:resizeMode="none"
        app:numColumns="2"
        app:numMinColumns="2"
        app:numMinRows="2"
        app:numRows="2"
        app:providerId="1" />
    <widget
        android:label="@string/clock"
        android:icon="@drawable/ic_splash"
        android:name="@string/world_clock"
        android:description="@string/world_clock_desc"
        android:initialLayout="@layout/clock_medium_widget_layout"
        android:configure="com.android.launcher3.Launcher"
        android:resizeMode="horizontal"
        app:editable="true"
        app:numColumns="4"
        app:numMaxColumns="4"
        app:numMaxRows="2"
        app:numMinColumns="2"
        app:numMinRows="2"
        app:numRows="2"
        app:providerId="2" />
    <widget
        android:label="@string/clock"
        android:icon="@drawable/ic_splash"
        android:name="@string/world_clock"
        android:description="@string/world_clock_desc"
        android:initialLayout="@layout/clock_four_small_widget_layout"
        android:configure="com.android.launcher3.Launcher"
        android:resizeMode="horizontal"
        app:editable="true"
        app:numColumns="2"
        app:numMaxColumns="4"
        app:numMaxRows="2"
        app:numMinColumns="2"
        app:numMinRows="2"
        app:numRows="2"
        app:providerId="3" />
    <widget
        android:label="@string/calendar"
        android:icon="@drawable/ic_splash"
        android:name="@string/month"
        android:description="@string/calendar_month_desc"
        android:initialLayout="@layout/calendar_month_widget_layout"
        android:resizeMode="none"
        app:numColumns="2"
        app:numMinColumns="2"
        app:numMinRows="2"
        app:numRows="2"
        app:providerId="4" />
    <widget
        android:label="@string/calendar"
        android:icon="@drawable/ic_splash"
        android:name="@string/up_next"
        android:description="@string/up_next_desc"
        android:initialLayout="@layout/calendar_today_widget_layout"
        android:resizeMode="horizontal"
        app:numColumns="2"
        app:numMaxColumns="4"
        app:numMaxRows="2"
        app:numMinColumns="2"
        app:numMinRows="2"
        app:numRows="2"
        app:providerId="5" />
    <widget
        android:label="@string/calendar"
        android:icon="@drawable/ic_splash"
        android:name="@string/up_next"
        android:description="@string/up_next_desc"
        android:initialLayout="@layout/calendar_medium_widget_layout"
        android:resizeMode="horizontal"
        app:numColumns="4"
        app:numMaxColumns="4"
        app:numMaxRows="2"
        app:numMinColumns="2"
        app:numMinRows="2"
        app:numRows="2"
        app:providerId="6" />
    <widget
        android:label="@string/weather"
        android:icon="@drawable/ic_splash"
        android:name="@string/forecast"
        android:description="@string/forecast_desc"
        android:initialLayout="@layout/weather_small_widget_layout"
        android:resizeMode="horizontal|vertical"
        app:numColumns="2"
        app:numMaxColumns="4"
        app:numMaxRows="4"
        app:numMinColumns="2"
        app:numMinRows="2"
        app:numRows="2"
        app:providerId="7" />
    <widget
        android:label="@string/weather"
        android:icon="@drawable/ic_splash"
        android:name="@string/forecast"
        android:description="@string/forecast_desc"
        android:initialLayout="@layout/weather_medium_widget_layout"
        android:resizeMode="horizontal|vertical"
        app:numColumns="4"
        app:numMaxColumns="4"
        app:numMaxRows="4"
        app:numMinColumns="2"
        app:numMinRows="2"
        app:numRows="2"
        app:providerId="8" />
    <widget
        android:label="@string/weather"
        android:icon="@drawable/ic_splash"
        android:name="@string/forecast"
        android:description="@string/forecast_desc"
        android:initialLayout="@layout/weather_widget_large_layout"
        android:resizeMode="horizontal|vertical"
        app:numColumns="4"
        app:numMaxColumns="4"
        app:numMaxRows="4"
        app:numMinColumns="2"
        app:numMinRows="2"
        app:numRows="4"
        app:providerId="9" />
    <widget
        android:label="@string/photo"
        android:icon="@drawable/ic_splash"
        android:name="@string/featured"
        android:description="@string/featured_desc"
        android:initialLayout="@layout/photo_small_widget_layout"
        android:configure="com.android.launcher3.feature.photo.ChoosePhotoActivity"
        android:resizeMode="horizontal|vertical"
        app:editOnCreate="true"
        app:editable="true"
        app:numColumns="2"
        app:numMaxColumns="4"
        app:numMaxRows="4"
        app:numMinColumns="2"
        app:numMinRows="2"
        app:numRows="2"
        app:providerId="10" />
    <widget
        android:label="@string/photo"
        android:icon="@drawable/ic_splash"
        android:name="@string/featured"
        android:description="@string/featured_desc"
        android:initialLayout="@layout/photo_medium_widget_layout"
        android:configure="com.android.launcher3.feature.photo.ChoosePhotoActivity"
        android:resizeMode="horizontal|vertical"
        app:editOnCreate="true"
        app:editable="true"
        app:numColumns="4"
        app:numMaxColumns="4"
        app:numMaxRows="4"
        app:numMinColumns="2"
        app:numMinRows="2"
        app:numRows="2"
        app:providerId="11" />
    <widget
        android:label="@string/photo"
        android:icon="@drawable/ic_splash"
        android:name="@string/featured"
        android:description="@string/featured_desc"
        android:initialLayout="@layout/photo_large_widget_layout"
        android:configure="com.android.launcher3.feature.photo.ChoosePhotoActivity"
        android:resizeMode="horizontal|vertical"
        app:editOnCreate="true"
        app:editable="true"
        app:numColumns="4"
        app:numMaxColumns="4"
        app:numMaxRows="4"
        app:numMinColumns="2"
        app:numMinRows="2"
        app:numRows="4"
        app:providerId="12" />
    <widget
        android:label="@string/battery"
        android:icon="@drawable/ic_splash"
        android:name="@string/status"
        android:description="@string/status_desc"
        android:initialLayout="@layout/battery_small_widget_layout"
        android:resizeMode="none"
        app:numColumns="2"
        app:numMinColumns="2"
        app:numMinRows="2"
        app:numRows="2"
        app:providerId="13" />
    <widget
        android:label="@string/siri_suggestion"
        android:icon="@drawable/ic_splash"
        android:name="@string/app_suggestion"
        android:description="@string/app_suggestion_desc"
        android:initialLayout="@layout/suggestion_medium_widget_layout"
        android:resizeMode="horizontal"
        app:numColumns="4"
        app:numMaxColumns="4"
        app:numMaxRows="2"
        app:numMinColumns="2"
        app:numMinRows="2"
        app:numRows="2"
        app:providerId="14" />
    <widget
        android:label="@string/siri_suggestion"
        android:icon="@drawable/ic_splash"
        android:name="@string/app_suggestion"
        android:description="@string/app_suggestion_desc"
        android:initialLayout="@layout/suggestion_small_widget_layout"
        android:resizeMode="horizontal"
        app:numColumns="2"
        app:numMaxColumns="4"
        app:numMaxRows="2"
        app:numMinColumns="2"
        app:numMinRows="2"
        app:numRows="2"
        app:providerId="15" />
</widgets>