<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:background="@color/new_background"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <include
        android:id="@id/action_bar_custom"
        layout="@layout/action_bar_settings" />
    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/new_background_item_group_setting"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/medium_margin"
        android:layout_marginTop="32.0dip"
        android:layout_marginRight="@dimen/medium_margin"
        android:layout_marginHorizontal="@dimen/medium_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/action_bar_custom">
        <com.truelib.settings.custom.CheckedSettingsItem
            android:id="@id/one_selected_refresh"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:settingText="@string/one_selected_refresh" />
        <com.truelib.settings.custom.CheckedSettingsItem
            android:id="@id/two_selected_refresh"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:hideIconChecked="true"
            app:settingText="@string/two_selected_refresh" />
        <com.truelib.settings.custom.CheckedSettingsItem
            android:id="@id/three_selected_refresh"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:hideIconChecked="true"
            app:settingText="@string/three_selected_refresh" />
        <com.truelib.settings.custom.CheckedSettingsItem
            android:id="@id/four_selected_refresh"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:hideIconChecked="true"
            app:settingText="@string/four_selected_refresh" />
        <com.truelib.settings.custom.CheckedSettingsItem
            android:id="@id/five_selected_refresh"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:hideIconChecked="true"
            app:settingText="@string/five_selected_refresh" />
        <com.truelib.settings.custom.CheckedSettingsItem
            android:id="@id/six_selected_refresh"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:hideDivider="true"
            app:hideIconChecked="true"
            app:settingText="@string/six_selected_refresh" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>