<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/bg_apply_theme"
    android:paddingLeft="16.0dip"
    android:paddingTop="20.0dip"
    android:paddingRight="16.0dip"
    android:paddingBottom="20.0dip"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16.0dip"
    android:paddingHorizontal="16.0dip"
    android:paddingVertical="20.0dip"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@id/img_dialog"
        android:layout_width="150.0dip"
        android:layout_height="150.0dip"
        android:src="@drawable/ic_cat_noti"
        android:contentDescription="@null" />
    <com.truelib.common.TextViewCustomFont
        android:textSize="18.0dip"
        android:textColor="@color/theme_text_primary"
        android:id="@id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24.0dip"
        android:text="@string/may_we_send_notifications"
        app:customFont="2" />
    <com.truelib.common.TextViewCustomFont
        android:textSize="16.0dip"
        android:textColor="@color/theme_text_secondary"
        android:gravity="center"
        android:id="@id/content_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12.0dip"
        android:text="@string/content_access_noti" />
    <com.truelib.common.TextViewCustomFont
        android:textSize="16.75dip"
        android:textColor="@color/white"
        android:gravity="center"
        android:id="@id/allow_noti"
        android:background="@drawable/rounded_button_bg"
        android:paddingLeft="24.0dip"
        android:paddingTop="13.5dip"
        android:paddingRight="24.0dip"
        android:paddingBottom="13.5dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30.0dip"
        android:text="@string/allow_notification"
        android:includeFontPadding="false"
        android:backgroundTint="@color/blue_color"
        android:backgroundTintMode="add"
        android:paddingHorizontal="24.0dip"
        android:paddingVertical="13.5dip"
        app:customFont="2" />
    <com.truelib.common.TextViewCustomFont
        android:textSize="16.75dip"
        android:textColor="@color/theme_color_blue"
        android:gravity="center"
        android:id="@id/deny"
        android:background="@drawable/rounded_button_bg"
        android:paddingLeft="24.0dip"
        android:paddingTop="13.5dip"
        android:paddingRight="24.0dip"
        android:paddingBottom="13.5dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8.0dip"
        android:text="@string/deny"
        android:includeFontPadding="false"
        android:drawablePadding="8.0dip"
        android:paddingHorizontal="24.0dip"
        android:paddingVertical="13.5dip"
        app:customFont="2" />
    <LinearLayout
        android:id="@id/ll_dont_ask_again"
        android:padding="4.0dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4.0dip">
        <ImageView
            android:textSize="12.0dip"
            android:id="@id/img_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/primary_check_box" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_ask_again"
            android:layout_marginStart="6.0dip" />
    </LinearLayout>
</LinearLayout>