<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/bg_apply_theme"
    android:paddingLeft="16.0dip"
    android:paddingRight="16.0dip"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16.0dip"
    android:paddingHorizontal="16.0dip"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:layout_width="@dimen/success_icon_size"
        android:layout_height="@dimen/success_icon_size"
        android:src="@drawable/congraturation_cat"
        android:contentDescription="@null" />
    <com.truelib.common.TextViewCustomFont
        android:textSize="18.0dip"
        android:textColor="@color/theme_text_primary"
        android:id="@id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4.0dip"
        android:text="@string/successfully_set_icon"
        app:customFont="2" />
    <com.truelib.common.TextViewCustomFont
        android:textSize="16.0dip"
        android:textColor="@color/theme_text_secondary"
        android:gravity="center"
        android:id="@id/content_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12.0dip"
        android:text="@string/content_success_set_theme" />
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:id="@id/go_to_home"
        android:background="@drawable/bg_btn_action"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30.0dip">
        <com.truelib.common.TextViewCustomFont
            android:textSize="16.0dip"
            android:textColor="@color/white"
            android:gravity="center"
            android:paddingTop="13.0dip"
            android:paddingBottom="13.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_home_screen"
            android:includeFontPadding="false"
            android:drawablePadding="8.0dip"
            android:paddingVertical="13.0dip"
            app:customFont="2" />
    </LinearLayout>
    <com.truelib.common.TextViewCustomFont
        android:textSize="16.0dip"
        android:textColor="@color/theme_color_blue"
        android:gravity="center"
        android:id="@id/later"
        android:paddingLeft="6.0dip"
        android:paddingTop="10.0dip"
        android:paddingRight="6.0dip"
        android:paddingBottom="10.0dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6.0dip"
        android:layout_marginBottom="20.0dip"
        android:text="@string/set_later"
        android:includeFontPadding="false"
        android:drawablePadding="8.0dip"
        android:paddingHorizontal="6.0dip"
        android:paddingVertical="10.0dip"
        app:customFont="2" />
</LinearLayout>