<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout
        android:id="@id/constraintLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <com.truelib.settings.custom.TextCustomFont
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/blue_color"
            android:gravity="center"
            android:layout_gravity="start"
            android:id="@id/action_use_default"
            android:padding="5.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6.0dip"
            android:text="@string/default_name" />
        <com.truelib.settings.custom.TextCustomFont
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/main_text"
            android:ellipsize="end"
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@id/action_bar_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_folder"
            app:customFont="4" />
        <com.truelib.settings.custom.TextCustomFont
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/blue_color"
            android:gravity="center"
            android:layout_gravity="end"
            android:id="@id/action_done"
            android:padding="5.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6.0dip"
            android:text="@string/done" />
    </FrameLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@id/app_list_type"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
</LinearLayout>